Changed files for Git Workflow.

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -15,5 +15,6 @@
 #
 #==============================================================
 #
+R1.1.0: First version with Git Workflow.
 
 s7plc-R1-0-0: Initial Tagged Release.
