--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -15,6 +15,7 @@
 #
 #==============================================================
 #
+R1.1.1: change epics version check to build with epics 7
 R1.1.0: First version with Git Workflow.
 
 s7plc-R1-0-0: Initial Tagged Release.
